--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,5 @@
 body{
-    background-color: rgb(221, 148, 148);
+    background-color: rgb(218, 209, 209);
+    margin-left: 40%;
+    margin-right: 40%;
 }
