--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -11,6 +11,7 @@
     <link href="/styles/rest.css" rel="stylesheet"/>
 </head>
 <body>
+    <form action="/"></form>
     <ul>
     <% searchResults.forEach( book => { %>
         <li>
