--- a/views/pages/books/show.ejs
+++ b/views/pages/books/show.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <%- include('./detail', {page_title: 'Details'}) %>
+    <form action="/"  method="get">
+        <button>View Saved Books</button>
+    </form>
     
 </body>
 </html>
