--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
                 <img src="<%= book.image_url %>" alt="">
                 <h5><%= book.title %></h5>
                 <p><%= book.author %></p>
-                <form action="/book/<%= book.id %>"  method="get">
+                <form action="/books/<%= book.id %>"  method="get">
                     <button>View Details</button>
                 </form>
             </li>
