--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>book-app</title>
-    <link href="/styles/base.css" rel="stylesheet"/>
-    <link href="/styles/layout.css" rel="stylesheet"/>
-    <link href="/styles/modules.css" rel="stylesheet"/>
-    <link href="/styles/rest.css" rel="stylesheet"/>
+    <%- include('../layout/head') %>
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/searches/new">Search</a></li>
-        </ul>
+        <%- include('../layout/header') %>
     </header>
     <h3><%= databaseResults.length %> Saved Books</h3>
     <ul>
