--- a/views/pages/books/show.ejs
+++ b/views/pages/books/show.ejs
@@ -2,18 +2,11 @@
 <html lang="en">
 <head>
    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>book-app</title>
-    <link href="/styles/base.css" rel="stylesheet"/>
-    <link href="/styles/layout.css" rel="stylesheet"/>
-    <link href="/styles/modules.css" rel="stylesheet"/>
-    <link href="/styles/rest.css" rel="stylesheet"/>
+    <%- include('../../../layout/head') %>
 
 </head>
 <header>
-    <%- include('../../layout/header') %>
+    <%- include('../../../layout/header') %>
 </header>
 <body>
     <%- include('./detail', {page_title: 'Details'}) %>
