--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="/styles/base.css" rel="stylesheet"/>
-    <link href="/styles/layout.css" rel="stylesheet"/>
-    <link href="/styles/modules.css" rel="stylesheet"/>
-    <link href="/styles/rest.css" rel="stylesheet"/>
+    <%- include('../../layout/head') %>
 </head>
 <body>
     <header>
-        <%- include('./layout/header') %>
+        <%- include('../../layout/header') %>
     </header>
     <form action="/"></form>
     <ul>
