--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -10,14 +10,14 @@
     <ul>
     <% searchResults.forEach( book => { %>
         <li>
-            <img src="<%= book.image %>" alt="">
+            <img src="<%= book.image_url %>" alt="">
             <h5><%= book.title %></h5>
             <p><%= book.author %></p>
             <form action="/books" method="post">
                 <input type="hidden" name="title" value="<%= book.title %>">
                 <input type="hidden" name="author" value="<%= book.author %>">
                 <input type="hidden" name="isbn" value="<%= book.isbn %>">
-                <input type="hidden" name="image" value="<%= book.image %>">
+                <input type="hidden" name="image_url" value="<%= book.image_url %>">
                 <input type="hidden" name="description" value="<%= book.description %>">
                 <button type="submit" id="save-to-bookshelf">Select this Book</button>
               </form>
