--- a/views/pages/books/show.ejs
+++ b/views/pages/books/show.ejs
@@ -20,5 +20,5 @@
     </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../../js/app.js"></script>
+<script src="/js/app.js"></script>
 </html>
