--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -19,7 +19,7 @@
                 <input type="hidden" name="isbn" value="<%= book.isbn %>">
                 <input type="hidden" name="image_url" value="<%= book.image_url %>">
                 <input type="hidden" name="description" value="<%= book.description %>">
-                <button type="submit" id="save-to-bookshelf">Select this Book</button>
+                <button type="submit">Select this Book</button>
               </form>
         </li>
     <% }) %>
